k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tevau-cs-engine-dev
  labels:
    app.kubernetes.io/name: tevau-cs-engine
    env: dev
