k8s/dev/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cs-engine-api
  namespace: tevau-cs-engine-dev
  labels:
    app: cs-engine-api
spec:
  type: ClusterIP
  selector:
    app: cs-engine-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
