k8s/dev/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cs-engine-web
  namespace: tevau-cs-engine-dev
  labels:
    app: cs-engine-web
spec:
  type: ClusterIP
  selector:
    app: cs-engine-web
  ports:
    - name: http
      port: 80
      targetPort: 80
